--- a/exWeb/src/main/webapp/WEB-INF/web.xml
+++ b/exWeb/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,6 @@
 		<servlet-name>login</servlet-name>
 		<servlet-class>controller.LoginAction</servlet-class>
 	</servlet>
-
 	<!-- 매핑 작업 -->
 	<servlet-mapping>
 		<servlet-name>login</servlet-name>
@@ -29,11 +28,135 @@
 	<!-- 서블릿board를 부르면 boardPro.jsp를 실행하게 된다 -->
 	<servlet>
 		<servlet-name>board</servlet-name>
-		<jsp-file>/board/boardPro.jsp</jsp-file>
+		<servlet-class>controller.BoardAction</servlet-class>
 	</servlet>
 	<!-- 매핑도 해줘야한다 -->
 	<servlet-mapping>
 		<servlet-name>board</servlet-name>
 		<url-pattern>/board</url-pattern>
 	</servlet-mapping>
+	
+	<!-- 로그아웃 -->
+	<servlet>
+		<servlet-name>logout</servlet-name>
+		<servlet-class>controller.LogoutAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>logout</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
+	
+	<!-- 가입 -->
+	<servlet>
+		<servlet-name>JoinAction</servlet-name>
+		<servlet-class>controller.JoinAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>JoinAction</servlet-name>
+		<url-pattern>/JoinAction</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>joinOut</servlet-name>
+		<servlet-class>controller.JoinOutAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>joinOut</servlet-name>
+		<url-pattern>/joinOut</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>joinout-jsp</servlet-name>
+		<jsp-file>/joinOut/joinout.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>joinout-jsp</servlet-name>
+		<url-pattern>/joinout</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>boardlist</servlet-name>
+		<jsp-file>/board/board.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardlist</servlet-name>
+		<url-pattern>/boardlist</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>boardWrite</servlet-name>
+		<jsp-file>/board/boardWrite.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardWrite</servlet-name>
+		<url-pattern>/boardWrite</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>BoardWriteAction</servlet-name>
+		<servlet-class>controller.BoardWriteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardWriteAction</servlet-name>
+		<url-pattern>/BoardWriteAction</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>boardView</servlet-name>
+		<jsp-file>/board/boardView.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardView</servlet-name>
+		<url-pattern>/boardView</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>BoardLikeAction</servlet-name>
+		<servlet-class>controller.BoardLikeAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardLikeAction</servlet-name>
+		<url-pattern>/BoardLikeAction</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>BoardUpdateAction</servlet-name>
+		<servlet-class>controller.BoardUpdateAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardUpdateAction</servlet-name>
+		<url-pattern>/BoardUpdateAction</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>BoardDeleteAction</servlet-name>
+		<servlet-class>controller.BoardDeleteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardDeleteAction</servlet-name>
+		<url-pattern>/BoardDeleteAction</url-pattern>
+	</servlet-mapping>
+	
+	
+	<servlet>
+		<servlet-name>join</servlet-name>
+		<jsp-file>/join/join.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>join</servlet-name>
+		<url-pattern>/join</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>agree</servlet-name>
+		<jsp-file>/agree/agree.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>agree</servlet-name>
+		<url-pattern>/agree</url-pattern>
+	</servlet-mapping>
+
 </web-app>
